[package]
name = "p2p_gossiping_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = [ "net", "sync", "rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.10"
tokio-io = "0.1.13"

actix = { version = "0.13.3", features = ["default"] }
actix-rt = "2.2"
actix-codec = "0.5.2"

serde = "1.0.197"
serde_derive = "1.0.197"
byteorder = "1.5.0"
bincode = "1.3.3"
bytes = "1.5.0"

thiserror = "1.0.57"

clap = { version = "4.5.1", features = ["derive"] }

random_word = { version = "0.4.3", features = ["en"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt"] }

time = { version = "0.3.34", features = ["macros", "formatting", "parsing", "local-offset", "default"] }